; ModuleID = '/home/carl/AnghaBench/timescaledb/test/src/bgw/extr_params.c_ts_params_get.c'
source_filename = "/home/carl/AnghaBench/timescaledb/test/src/bgw/extr_params.c_ts_params_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ts_params_get() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = alloca i32*, align 8
  %3 = call %struct.TYPE_4__* (...) @params_open_wrapper()
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %1, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %5 = icmp ne %struct.TYPE_4__* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @Assert(i32 %6)
  %8 = call i32* @palloc(i32 4)
  store i32* %8, i32** %2, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = call i32 @SpinLockAcquire(i32* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = call i32 @memcpy(i32* %12, i32* %14, i32 4)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = call i32 @SpinLockRelease(i32* %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %20 = call i32 @params_close_wrapper(%struct.TYPE_4__* %19)
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}

declare dso_local %struct.TYPE_4__* @params_open_wrapper(...) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32* @palloc(i32) #1

declare dso_local i32 @SpinLockAcquire(i32*) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @SpinLockRelease(i32*) #1

declare dso_local i32 @params_close_wrapper(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
